# 3rd_sem_oop

./: .gitignor  CMakeLists.txt  README.md  Twelve.cpp  Twelve.h  binary_representation.cpp  binary_representation.h  main.cpp  solution.cpp  solution.h  test.cpp  test_binary_representation.cpp
include/: CustomMemoryResource.h  Figure.h  FigureArray.h  Hexagon.h  Octagon.h  Pentagon.h  Queue.h
src/: CustomMemoryResource.cpp  Figure.cpp  FigureArray.cpp  Hexagon.cpp  Octagon.cpp  Pentagon.cpp  main.cpp
tests/: tests.cpp
